--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="flex items-center gap-3">
             <img src="assets/vt-logo-icon.png" alt="VT Sports Solutions" class="vt-logo-icon" style="height:32px">
             <span class="text-sm font-semibold text-zinc-200">Matchup Analysis</span>
-            <span class="text-xs text-zinc-500 ml-1">da2ca32 • 2026-02-12 12:31 PM MST</span>
+            <span class="text-xs text-zinc-500 ml-1" id="buildVersion">2b43abe • 2026-02-12 05:18 PM MST</span>
         </div>
         <div class="flex items-center gap-2" id="filterBar">
             <span class="text-xs text-zinc-500 mr-1">Filter:</span>
